# forge-tree-python

./: .gitignore  .mypy.ini  CHANGELOG.md  complex.txt  doc.txt  pyproject.toml  quick_test.py  structure.txt
src/forge_tree/: __init__.py  cli.py  errors.py
src/forge_tree/generator/: file_generator.py
src/forge_tree/parser/: tree_parser.py
tests/: test_parser.py
